--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="./style.css"> -->
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap');
-    </style>
+
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
 </head>
@@ -87,7 +84,7 @@
                 style="background-image: linear-gradient(to bottom, #e4f3ff, #fff, #f0f8ff, #d1eaff, #93ceff);">
                 <div class="w-4/5 mt-40 flex lg:flex-row flex-col justify-start items-center md:gap-4 h-full">
                     <div class="w-1/2 md:flex hidden justify-center items-center h-full relative mt-4"><img
-                            src="/assets/heroimage-BpjEM4Jy.webp" alt="" class="absolute -bottom-10 w-2/3 right-10">
+                            src="./assets/heroimage-BpjEM4Jy.webp" alt="" class="absolute -bottom-10 w-2/3 right-10">
                     </div>
                     <div class="md:w-1/2 w-full flex flex-col justify-start items-start lg:h-1/2 h-fit">
                         <h2
@@ -902,7 +899,7 @@
             </div>
         </div>
         <div class="flex w-full flex-col justify-center items-center absolute bottom-0">
-            <div><img src="/assets/LOGO-C7t8f6wp.svg" alt="" class="size-24"></div>
+            <div><img src="./assets/LOGO-C7t8f6wp.svg" alt="" class="size-24"></div>
             <div class="flex justify-center w-full text-darkgrey text-xs font-medium lg:text-sm mb-2">
                 <p>Copyright© Lee Home Packers And Movers | All rights reserved.</p>
             </div>
