--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 aria-label="Get Instant Quote">Get Instant Quote</button></div>
                     </div>
                     <div class="md:w-1/2 w-full flex md:hidden justify-center items-center h-1/2 relative mt-4"><img
-                            src="/assets/heroimage-BpjEM4Jy.webp" alt="" class="absolute -bottom-28 w-full right-0">
+                            src="./assets/heroimage-BpjEM4Jy.webp" alt="" class="absolute -bottom-28 w-full right-0">
                     </div>
                 </div>
             </section>
@@ -506,7 +506,7 @@
                             </div>
                             <div class="w-1/2">
                                 <div class="w-full h-full flex justify-center items-center"><img
-                                        src="/assets/Order-Delivered_1-226nWU5z.png" alt="" class="w-3/4"></div>
+                                        src="./assets/Order-Delivered_1-226nWU5z.png" alt="" class="w-3/4"></div>
                             </div>
                         </div>
                     </div>
